--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
   <audio id="slideSound" src="sounds/cards_slide.wav" preload="auto"></audio>
   <audio id="buySound" src="sounds/buy.mp3" preload="auto"></audio>
   <audio id="talkNpc" src="sounds/talk.mp3" preload="auto"></audio>
+  <audio id="ambientSound" src="sounds/ambient.mp3" preload="auto" loop></audio>
 
 </body>
 <script>
