--- a/finish.html
+++ b/finish.html
@@ -35,15 +35,19 @@
             document.querySelector('.ingredients').textContent = selectedDrink.ingredients;
         }
     });
+
     function playAmbient() {
         const music = document.querySelector('#ambientSound');
 
         music.volume = 0.1;
 
-        music.play().catch(error => {
-            console.log('Erreur lors de la lecture de la musique:', error);
+        document.addEventListener('click', () => {
+            music.play().catch(error => {
+                console.log('Erreur lors de la lecture de la musique:', error);
+            });
         });
     }
+
     playAmbient();
 </script>
 <script src="app.js"></script>
