--- a/finish.html
+++ b/finish.html
@@ -41,8 +41,10 @@
 
         music.volume = 0.1;
 
-        music.play().catch(error => {
-            console.log('Erreur lors de la lecture de la musique:', error);
+        document.addEventListener('click', () => {
+            music.play().catch(error => {
+                console.log('Erreur lors de la lecture de la musique:', error);
+            });
         });
     }
 
