try music fix commit

--- a/finish.html
+++ b/finish.html
@@ -41,11 +41,11 @@
 
         music.volume = 0.1;
 
-        document.addEventListener('click', () => {
+        window.onload = function () {
             music.play().catch(error => {
                 console.log('Erreur lors de la lecture de la musique:', error);
             });
-        });
+        };
     }
 
     playAmbient();
