--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
   function buttonOnClick() {
     const playBuy = document.getElementById('buySound');
     playBuy.playbackRate = 2;
+    playBuy.volume = 2.5;
     playBuy.play();    
   }
 </script>
