--- a/finish.html
+++ b/finish.html
@@ -7,6 +7,7 @@
     <title>Barcad'ia | Choix</title>
     <link rel="icon" type="image/x-icon" href="drink.ico">
     <link rel="stylesheet" href="finish.css">
+    <link rel="stylesheet" href="manifest.json">
 </head>
 
 <body>
